--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.5.0",
     "@nuxtjs/supabase": "^0.3.1",
     "@nuxtjs/tailwindcss": "^6.4.1",
     "nuxt": "^3.2.3"
+  },
+  "dependencies": {
+    "marked": "^4.2.12",
+    "vue-contenteditable": "^4.1.0"
   }
 }
